[gd_scene load_steps=30 format=3 uid="uid://b1fd0k558kp2"]

[ext_resource type="Script" path="res://player.gd" id="1_mlmal"]
[ext_resource type="Texture2D" uid="uid://dobvkwauieauj" path="res://Sprout Lands - Sprites - Basic pack/Characters/Basic Charakter Spritesheet.png" id="2_qoor8"]
[ext_resource type="PackedScene" uid="uid://ckqb3dg2upw3k" path="res://health bar/health.tscn" id="3_b0lcg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1si3a"]
size = Vector2(11, 18)

[sub_resource type="Animation" id="Animation_h338j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_clbtb"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_fr21f"]
resource_name = "idle left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_ur1a0"]
resource_name = "idle right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}

[sub_resource type="Animation" id="Animation_0hous"]
resource_name = "idle up "
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_xih1w"]
resource_name = "walk down"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_u7ql1"]
resource_name = "walk left"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [10, 11]
}

[sub_resource type="Animation" id="Animation_cmdoa"]
resource_name = "walk right"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [14, 15]
}

[sub_resource type="Animation" id="Animation_pwuy1"]
resource_name = "walk up"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ebln"]
_data = {
"RESET": SubResource("Animation_h338j"),
"idle": SubResource("Animation_clbtb"),
"idle left": SubResource("Animation_fr21f"),
"idle right": SubResource("Animation_ur1a0"),
"idle up ": SubResource("Animation_0hous"),
"walk down": SubResource("Animation_xih1w"),
"walk left": SubResource("Animation_u7ql1"),
"walk right": SubResource("Animation_cmdoa"),
"walk up": SubResource("Animation_pwuy1")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vtpsa"]
animation = &"walk down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8wd53"]
animation = &"walk up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eeuc6"]
animation = &"walk left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ffnfv"]
animation = &"walk right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_r1j24"]
blend_point_0/node = SubResource("AnimationNodeAnimation_vtpsa")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_8wd53")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_eeuc6")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_ffnfv")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rp7lw"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fdgxi"]
animation = &"idle up "

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xxc02"]
animation = &"idle left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_s7vsl"]
animation = &"idle right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_0qsce"]
blend_point_0/node = SubResource("AnimationNodeAnimation_rp7lw")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_fdgxi")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_xxc02")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_s7vsl")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_58814"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jxh7h"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_15ufi"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_p6yax"]
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_r1j24")
states/Walk/position = Vector2(488, 97)
"states/İdle/node" = SubResource("AnimationNodeBlendSpace2D_0qsce")
"states/İdle/position" = Vector2(316, 100)
transitions = ["İdle", "Walk", SubResource("AnimationNodeStateMachineTransition_58814"), "Walk", "İdle", SubResource("AnimationNodeStateMachineTransition_jxh7h"), "Start", "İdle", SubResource("AnimationNodeStateMachineTransition_15ufi")]

[sub_resource type="CircleShape2D" id="CircleShape2D_i3t1i"]
radius = 7.07107

[node name="CharacterBody2D" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 3
script = ExtResource("1_mlmal")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_qoor8")
hframes = 4
vframes = 4
frame = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_1si3a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3ebln")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3ebln")
}
tree_root = SubResource("AnimationNodeStateMachine_p6yax")
advance_expression_base_node = NodePath("../AnimationPlayer")
anim_player = NodePath("../AnimationPlayer")
parameters/Walk/blend_position = Vector2(0.0169492, -0.667686)
"parameters/İdle/blend_position" = Vector2(-0.0105932, 0.00480354)

[node name="Health" parent="." instance=ExtResource("3_b0lcg")]
offset_left = -9.0
offset_top = -16.0
offset_right = 9.0
offset_bottom = -12.0

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
shape = SubResource("CircleShape2D_i3t1i")

[node name="attackcooldown" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="deal_attack_timer" type="Timer" parent="."]

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attackcooldown" to="." method="_on_attackcooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
